# IBrowser

./: CMakeLists.txt  Configuration.cmake  Configuration.txt  README.md  gen_build.bat
cmake/: AssembleBinDirs.cmake  Dependencies.cmake  PlatformSpecific.cmake
include/: config.h.in
include/ibrowser/: global.h  ibrowserapp.h  ibrowserclient.h  ibrowserhandler.h  ibrowserrenderer.h  ibrowsersingle.h  ibrowsertab.h  ibrowsertabwidget.h  ibrowserwindow.h  ibtabbar.h  ibwidget.h  imainwindow.h  main.h  myframe.h  signalsslots.h  ui_ibrowser.h
include/utils/: messagebox.h  singleton.h
src/ibrowser/: CMakeLists.txt  global.cpp  ibrowser.qrc  ibrowser.ui  ibrowserapp.cpp  ibrowserclient.cpp  ibrowserhandler.cpp  ibrowserrenderer.cpp  ibrowsersingle.cpp  ibrowsertab.cpp  ibrowsertabwidget.cpp  ibrowserwindow.cpp  ibtabbar.cpp  ibwidget.cpp  imainwindow.cpp  imainwindow.h  main.cpp  myframe.cpp  qrc_ibrowser.cpp  signalsslots.cpp
src/subprocess/: CMakeLists.txt  subprocess.cpp
src/utils/: CMakeLists.txt
