###########################################################################
#   Copyright (C) 2014 by jerry			                                  #
#                                                                         #
#   This file is part of IBrowser.                                        #
#                                                                         #
#   IBrowser is private software.                                         #
#                                                                         #
#   program.  If not, see <https://github.com/jerrykk/IBrowser>.          #
#                                                                         #
#   IBrowser website: https://github.com/jerrykk/IBrowser                 #
###########################################################################

#############################################################################
#
# utils library
#
#############################################################################


set(UTILS_SRCS
    
   )


add_library(utils STATIC ${UTILS_SRCS})
